--- a/configuration.properties
+++ b/configuration.properties
@@ -1,2 +1,4 @@
-URL=http://qa.trycloud.net/index.php/login?clear=1
-Browser=chrome
+browser=chrome
+username=User6
+password=Userpass123
+URL=http://qa2.trycloud.net/index.php/login
